
v1.4.2 "aequaora viridia":
 - Fix issue where changing the 3hs theme would instantly crash
 - Fix issue where updating the base game would first delete
 - Fix minor bugs

v1.4.1 "aequaora viridia":
 - Fix issue where closing the lid while in the timeout screen would pause the download
 - Fix issue where 3hs would load only the dark, light and selected theme
 - Fix issue where 3hs would freeze or crash when sleep mode was triggered
 - Make quitting the app during an install or api requests possible via the HOME menu
 - Make the progress bar omit the ETA if it is not known
 - Improve stability of the api network requests
 - General system stability improvements to enhance the user's experience

v1.4.0 "aequora viridia":
 - Fix issue where an unlisted title would crash 3hs
 - Fix issue where jumping a page in a list would skip an entry
 - Fix issue where DSiWare that was already installed would not be detected
 - Fix issue where it was possible to add duplicate titles to the queue
 - Fix regional variants of VC console names being incorrect
 - Fix battery indicator not turning red when only one bar is left
 - Make 3hs not remove every queue item if there was a failure, but only those that succeeded
 - Make 3hs always display the title currently being installed
 - Make battery indicator show whether or not a charger is plugged in
 - Add a progress bar instead of spinner for deleting unused tickets
 - Add feature to place the cursor at the subcategory that matches the system region
 - Add support for the Luma3DS v11.0 configuration format
 - Add latency graph during installation
 - Add music support

v1.3.7 "libere dorme":
 - Fix issue preventing usage on older system versions
 - Support product code search

v1.3.6 "libere dorme":
 - Always delete unused tickets during installation
 - Fix crash at boot on Korean/Chinese systems
 - Fix some text not being visible
 - Fix manual LumaLocale mode prompt while installing from queue

v1.3.5 "libere dorme":