@@ -1,8 +1,12 @@
 
 v1.4.2 "aequaora viridia":
+ - Add a minimum system version requirement (that is, version 9.6.0)
+ - Add information about the Virtual Console type in extended meta
+ - Fix alphabetical sort taking the Virtual Console tag into account
  - Fix issue where changing the 3hs theme would instantly crash
- - Fix issue where updating the base game would first delete
- - Fix minor bugs
+ - Fix issue where updating the base game would first delete itself
+ - Improve performance by using binary api data
+ - General system stability improvements to enhance the user's experience
 
 v1.4.1 "aequaora viridia":
  - Fix issue where closing the lid while in the timeout screen would pause the download
